--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuepress-plugin-comment",
-  "version": "0.1.1",
-  "description": "vuepress commment plugin",
+  "version": "0.1.2",
+  "description": "Support popluar comment plugins in Vuepress, sucn as Gitalk, Valine, Disqus.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
