--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-comment",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Support popluar comment plugins in Vuepress, sucn as Gitalk, Valine, Disqus.",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,9 @@
   "homepage": "https://github.com/dongyuanxin/vuepress-plugin-comment#readme",
   "dependencies": {
     "ejs": "^2.6.1",
-    "gitalk": "^1.5.0"
+    "gitalk": "^1.5.0",
+    "gitalk-fix": "^1.5.2",
+    "i": "^0.3.6",
+    "npm": "^6.9.0"
   }
 }
