--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gitalk": "^1.5.0",
     "gitalk-fix": "^1.5.2",
     "i": "^0.3.6",
-    "npm": "^6.9.0"
+    "npm": "^6.9.0",
+    "valine": "^1.3.9"
   }
 }
