--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-comment",
-  "version": "0.5.4",
+  "version": "0.7.0-beta.0",
   "description": "Support popluar comment plugins in Vuepress, sucn as Gitalk, Valine, Disqus.",
   "main": "index.js",
   "scripts": {
